--- a/index.html
+++ b/index.html
@@ -5,39 +5,120 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Rifa - Sorteos El Compa Casi</title>
 <style>
-  body { font-family: Arial,sans-serif; padding:20px; background:#f3f3f3; }
-  .grid { display:grid; grid-template-columns: repeat(auto-fill, minmax(50px,1fr)); gap:10px; }
-  .number { padding:10px; text-align:center; border-radius:4px; cursor:pointer; }
-  .libre { background:#25D366; color:white; }
-  .ocupado { background:#ccc; color:#777; cursor:not-allowed; }
+  body {
+    font-family: Arial, sans-serif;
+    background: #f3f3f3;
+    padding: 20px;
+  }
+  h1, p {
+    text-align: center;
+  }
+  .container {
+    background: white;
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
+  }
+  .table-container {
+    height: 400px;
+    overflow-y: scroll;
+    border: 1px solid #ccc;
+    margin-top: 20px;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  td {
+    padding: 10px;
+    text-align: center;
+    cursor: pointer;
+    border: 1px solid #eee;
+  }
+  td.libre {
+    background: #25D366;
+    color: white;
+  }
+  td.ocupado {
+    background: #ccc;
+    color: #777;
+    cursor: not-allowed;
+  }
+  td.seleccionado {
+    background: #007BFF;
+    color: white;
+  }
+  .whatsapp-button {
+    background: #25D366;
+    padding: 10px;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    display: none;
+    margin: 20px auto 0;
+    width: max-content;
+    font-weight: bold;
+  }
+  .whatsapp-button:hover {
+    background: #1ebe57;
+  }
 </style>
 </head>
 <body>
-<h1>🎟 Rifa - Sorteos El Compa Casi 🎟</h1>
-<p>Haz clic en un número libre para apartarlo y envíame el comprobante por WhatsApp.</p>
-<div class="grid" id="grid"></div>
+<div class="container">
+  <h1>🎟 Rifa - Sorteos El Compa Casi 🎟</h1>
+  <p>Selecciona uno o más números y luego haz clic para enviar tu comprobante.</p>
+
+  <div class="table-container">
+    <table id="tabla-numeros"></table>
+  </div>
+
+  <a id="whatsapp-button" class="whatsapp-button" target="_blank">Enviar Comprobante por WhatsApp</a>
+</div>
 
 <script>
 const apiUrl = "https://script.google.com/macros/s/AKfycbx9x_Uaww3AV_CcZdcjnPKD2fpaElbEKNFxWySllORi7GVuUYt37DIcRqjmXuU34VCf/exec";
+const tabla = document.getElementById('tabla-numeros');
+const whatsappBtn = document.getElementById('whatsapp-button');
+const seleccionados = new Set();
 
 fetch(apiUrl)
   .then(res => res.json())
-  .then(numeros => {
-    const grid = document.getElementById('grid');
-    numeros.forEach(num => {
-      const div = document.createElement('div');
-      div.textContent = num.numero;
-      div.className = 'number ' + num.estado;
-      if(num.estado === 'libre'){
-        div.onclick = () => window.open(
-          'https://wa.me/526672108008?text=Hola,%20quiero%20apartar%20el%20número%20' + num.numero,
-          '_blank'
-        );
+  .then(data => {
+    let fila;
+    data.forEach((item, index) => {
+      if (index % 10 === 0) {
+        fila = tabla.insertRow();
       }
-      grid.appendChild(div);
-    })
-  })
-  .catch(err => console.error(err));
+      const celda = fila.insertCell();
+      celda.textContent = item.numero;
+      celda.className = item.estado === 'ocupado' ? 'ocupado' : 'libre';
+      if (item.estado === 'libre') {
+        celda.onclick = () => {
+          celda.classList.toggle('seleccionado');
+          if (seleccionados.has(item.numero)) {
+            seleccionados.delete(item.numero);
+          } else {
+            seleccionados.add(item.numero);
+          }
+          actualizarBoton();
+        };
+      }
+    });
+  });
+
+function actualizarBoton() {
+  if (seleccionados.size > 0) {
+    const numeros = Array.from(seleccionados).join(', ');
+    whatsappBtn.href = `https://wa.me/526672108008?text=Hola,%20quiero%20participar%20en%20la%20rifa.%20Mis%20números%20seleccionados%20son:%20${numeros}`;
+    whatsappBtn.style.display = 'block';
+  } else {
+    whatsappBtn.style.display = 'none';
+  }
+}
 </script>
 </body>
 </html>
